--- a/kubernetes-manifests/openTelemetry-manifest.yaml
+++ b/kubernetes-manifests/openTelemetry-manifest.yaml
@@ -26,7 +26,7 @@ spec:
         send_batch_size : 800
 
       spanmetrics:
-        metrics_exporter: prometheus
+        metrics_exporter: dynatrace
 
       memory_limiter:
         check_interval: 1s
@@ -52,7 +52,7 @@ spec:
       otlphttp:
         endpoint: DT_TENANT_URL/api/v2/otlp
         headers:
-         Author ization: "Api-Token DT_TOKEN"
+          Authorization: "Api-Token DT_TOKEN"
 
       dynatrace:
          # optional - Dimensions specified here will be included as a dimension on every exported metric
@@ -72,11 +72,11 @@ spec:
         traces:
           receivers: [otlp,zipkin]
           processors: [memory_limiter,k8sattributes,batch]
-          exporters: [otlp]
+          exporters: [otlphttp]
         metrics:
           receivers: [otlp]
           processors: [memory_limiter,k8sattributes,batch]
           exporters: [prometheus]
         metrics/spanmetrics:
           receivers: [otlp/spanmetrics]
-          exporters: [otlp/spanmetrics]
+          exporters: [prometheus]
