--- a/kubernetes-manifests/K8sdemo.yaml
+++ b/kubernetes-manifests/K8sdemo.yaml
@@ -27,7 +27,7 @@ spec:
         env:
           - name: APP_ENV
             value: "production"
-          - name: PORT
+          - name: EMAIL_SERVICE_PORT
             value: '8080'
           - name: OTEL_SERVICE_NAME
             valueFrom:
@@ -52,7 +52,7 @@ spec:
           - name: OTEL_RESOURCE_ATTRIBUTES
             value: service.name=$(OTEL_SERVICE_NAME),k8s.namespace.name=$(OTEL_K8S_NAMESPACE),k8s.node.name=$(OTEL_K8S_NODE_NAME),k8s.pod.name=$(OTEL_K8S_POD_NAME)
           - name : OTEL_EXPORTER_OTLP_ENDPOINT
-            value: "http://localhost:4317"
+            value: "http://localhost:4318"
         resources:
           requests:
             cpu: 100m
@@ -135,7 +135,7 @@ spec:
             - name: PAYMENT_SERVICE_ADDR
               value: "paymentservice:8080"
             - name: EMAIL_SERVICE_ADDR
-              value: "emailservice:8080"
+              value: "http://emailservice:8080"
             - name: CURRENCY_SERVICE_ADDR
               value: "currencyservice:8080"
             - name: CART_SERVICE_ADDR
@@ -627,7 +627,7 @@ spec:
             - name: LOCUST_USERS
               value: '10'
             - name: LOCUST_HOST
-              value: http://${FRONTEND_ADDR}
+              value: http://frontend
             - name: LOCUST_HEADLESS
               value: 'false'
             - name: LOCUST_AUTOSTART
@@ -786,7 +786,7 @@ spec:
                   fieldPath: metadata.name
             - name: OTEL_RESOURCE_ATTRIBUTES
               value: service.name=$(OTEL_SERVICE_NAME),k8s.namespace.name=$(OTEL_K8S_NAMESPACE),k8s.node.name=$(OTEL_K8S_NODE_NAME),k8s.pod.name=$(OTEL_K8S_POD_NAME)
-            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+            - name: OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
               value: "http://localhost:4317"
           resources:
             requests:
@@ -1037,7 +1037,7 @@ spec:
             - name: OTEL_RESOURCE_ATTRIBUTES
               value: service.name=$(OTEL_SERVICE_NAME),k8s.namespace.name=$(OTEL_K8S_NAMESPACE),k8s.node.name=$(OTEL_K8S_NODE_NAME),k8s.pod.name=$(OTEL_K8S_POD_NAME)
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
-              value: "http://localhost:4317"
+              value: "http://localhost:4318"
           resources:
             requests:
               cpu: 200m
