--- a/exercice/01_collector/metrics/openTelemetry-manifest.yaml
+++ b/exercice/01_collector/metrics/openTelemetry-manifest.yaml
@@ -7,17 +7,22 @@ spec:
   hostNetwork: true
   serviceAccount: otelcontribcol
   image: otel/opentelemetry-collector-contrib:0.46.0
+  env:
+    - name: K8S_NODE_NAME
+      valueFrom:
+        fieldRef:
+          fieldPath: spec.nodeName
   config: |
     receivers:
       otlp:
         protocols:
           grpc:
           http:
-
       otlp/spanmetrics:
         protocols:
           grpc:
             endpoint: "localhost:65535"
+
     processors:
       batch:
         send_batch_max_size: 1000
@@ -25,7 +30,7 @@ spec:
         send_batch_size : 800
 
       spanmetrics:
-        metrics_exporter: dynatrace
+        metrics_exporter: prometheus
 
       memory_limiter:
         check_interval: 1s
@@ -48,15 +53,11 @@ spec:
 
     exporters:
       logging:
+        level: debug
       otlphttp:
         endpoint: DT_TENANT_URL/api/v2/otlp
         headers:
           Authorization: "Api-Token DT_TOKEN"
-
-      otlp/spanmetrics:
-          endpoint: "localhost:55677"
-          tls:
-            insecure: true
 
       dynatrace:
          # optional - Dimensions specified here will be included as a dimension on every exported metric
@@ -66,6 +67,11 @@ spec:
          endpoint: DT_TENANT_URL/api/v2/metrics/ingest
          # Token must at least have the Ingest metrics (metrics.ingest) permission
          api_token: "DT_TOKEN"
+      otlp/spanmetrics:
+         endpoint: "localhost:55677"
+         tls:
+           insecure: true
+
 
       prometheus:
         endpoint: "0.0.0.0:9090"
@@ -74,12 +80,12 @@ spec:
       pipelines:
         traces:
           receivers: [otlp]
-          processors: [memory_limiter,k8sattributes,spanmetrics,batch]
+          processors: [memory_limiter,k8sattributes,batch]
           exporters: [otlphttp]
         metrics:
           receivers: [otlp]
-          processors: [memory_limiter,k8sattributes,batch]
-          exporters: [prometheus]
+          processors: []
+          exporters: [logging,prometheus]
         metrics/spanmetrics:
           receivers: [otlp/spanmetrics]
           exporters: [otlp/spanmetrics]
