add the assets for the exercices.

--- a/exercice/02_auto-instrumentation/k8Sdemo-nootel.yaml
+++ b/exercice/02_auto-instrumentation/k8Sdemo-nootel.yaml
@@ -484,7 +484,8 @@ spec:
     spec:
       terminationGracePeriodSeconds: 5
       containers:
-        image: hrexed/cartservice-otel:0.2
+        - name: cartservice
+          image: hrexed/cartservice-otel:0.2
           imagePullPolicy: Always
           ports:
             - containerPort: 7070
