--- a/exercice/01_collector/metrics/openTelemetry-manifest.yaml
+++ b/exercice/01_collector/metrics/openTelemetry-manifest.yaml
@@ -53,14 +53,14 @@ spec:
 
     exporters:
       logging:
-        level: debug
+        loglevel: debug
       otlphttp:
         endpoint: DT_TENANT_URL/api/v2/otlp
         headers:
           Authorization: "Api-Token DT_TOKEN"
 
       dynatrace:
-         # optional - Dimensions specified here will be included as a dimension on every exported metric
+         # optional - Dimensions specified here will be incluwded as a dimension on every exported metric
          #            unless that metric already has a dimension with the same key.
          # optional - prefix will be prepended to each metric name in prefix.name format
          prefix: acereconnect
@@ -80,7 +80,7 @@ spec:
       pipelines:
         traces:
           receivers: [otlp]
-          processors: [memory_limiter,k8sattributes,batch]
+          processors: [memory_limiter,k8sattributes,spanmetrics,batch]
           exporters: [otlphttp]
         metrics:
           receivers: [otlp]
